replaced add include/exclude list button to Add

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-exclusions-section-card/feature-flag-exclusions-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-exclusions-section-card/feature-flag-exclusions-section-card.component.html
@@ -11,7 +11,7 @@
   <app-common-section-card-action-buttons
     header-right
     [showPrimaryButton]="true"
-    [primaryButtonText]="'feature-flags.details.add-exclude-list.button.text' | translate"
+    [primaryButtonText]="'global.add-button.text' | translate"
     [showMenuButton]="true"
     [menuButtonItems]="menuButtonItems"
     [isSectionCardExpanded]="isSectionCardExpanded"
