Toggle the action buttons w.r.t tags value

--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.html
@@ -24,10 +24,10 @@
       />
     </mat-chip-grid>
     <div class="sharing-icon-buttons">
-      <button *ngIf="showExportIcon" mat-icon-button class="icon-button" (click)="onExportClick()">
+      <button *ngIf="showImportIcon" mat-icon-button class="icon-button" (click)="onActionButtonClick()">
         <mat-icon>file_upload</mat-icon>
       </button>
-      <button *ngIf="showImportIcon" mat-icon-button class="icon-button" (click)="onImportClick()">
+      <button *ngIf="showExportIcon" mat-icon-button class="icon-button" (click)="onActionButtonClick()">
         <mat-icon>file_download</mat-icon>
       </button>
     </div>
