--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/import-feature-flag-modal/import-feature-flag-modal.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/import-feature-flag-modal/import-feature-flag-modal.component.scss
@@ -7,52 +7,14 @@
   height: 100%;
   color: grey;
 
-  mat-icon {
-    height: 70px;
-    width: 70px;
-    font-size: 70px;
-    color: grey;
+  .full-width {
+    width: 100%;
   }
 }
 
-.input-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border: 1px dashed grey;
-  border-radius: 4px;
-  height: 206px;
-  width: 592px;
-  position: relative;
-
-  button {
-    font-size: 14px;
-  }
-}
-
-.input-container-header {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-
-  mat-icon {
-    height: 24px;
-    width: 24px;
-    font-size: 24px;
-  }
-}
-
-.input-container-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-p {
+.import-message {
+  margin-top: 5px;
   color: grey;
-  font-size: 12px;
 }
 
 a {
