--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-import-container/common-import-container.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-import-container/common-import-container.component.html
@@ -3,7 +3,7 @@
   (dragover)="onDragOver($event)"
   (dragleave)="onDragLeave($event)"
   (drop)="onDrop($event)"
-  [ngClass]="{ 'drag-over': isDragOver }"
+  [ngClass]="{ 'drag-over': (isDragOver | async) }"
 >
     <mat-icon>file_upload</mat-icon>
     <p class="ft-14-600 drag-text">Drag & drop or</p>
