--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-details-page-content.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-details-page-content.component.html
@@ -3,21 +3,29 @@
     <app-common-section-card-list class="common-section-card-list">
       <app-feature-flag-overview-details-section-card
         [data]="featureFlag"
+        [isSectionCardExpanded]="isSectionCardExpanded"
+        (sectionCardExpandChange)="onSectionCardExpandChange($event)"
         section-card
       ></app-feature-flag-overview-details-section-card>
       <app-feature-flag-inclusions-section-card
         [data]="featureFlag"
+        [isSectionCardExpanded]="isSectionCardExpanded"
         *ngIf="(activeTabIndex$ | async) === 0"
         section-card
         >inclusions-card</app-feature-flag-inclusions-section-card
       >
       <app-feature-flag-exclusions-section-card
         [data]="featureFlag"
+        [isSectionCardExpanded]="isSectionCardExpanded"
         *ngIf="(activeTabIndex$ | async) === 0"
         section-card
         >exclusions-card</app-feature-flag-exclusions-section-card
       >
-      <app-feature-flag-exposures-section-card [data]="featureFlag" *ngIf="(activeTabIndex$ | async) === 1" section-card
+      <app-feature-flag-exposures-section-card
+        [data]="featureFlag"
+        [isSectionCardExpanded]="isSectionCardExpanded"
+        *ngIf="(activeTabIndex$ | async) === 1"
+        section-card
         >exposures-card</app-feature-flag-exposures-section-card
       >
     </app-common-section-card-list>
