--- a/frontend/projects/upgrade/src/styles.scss
+++ b/frontend/projects/upgrade/src/styles.scss
@@ -249,6 +249,10 @@ button[mat-icon-button] {
   width: 805px;
 }
 
+.full-width {
+  width: 100%;
+}
+
 .mat-mdc-checkbox {
   .mdc-checkbox {
     transform: scale(0.889); // transform 18px to 16px
