Changed the icons using google icons and added stylesheet request for it in index file

--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.html
@@ -25,10 +25,10 @@
     </mat-chip-grid>
     <div class="sharing-icon-buttons">
       <button *ngIf="showImportIcon" mat-icon-button class="icon-button" (click)="onActionButtonClick()">
-        <mat-icon>file_upload</mat-icon>
+        <span class="material-symbols-outlined"> upload </span>
       </button>
       <button *ngIf="showExportIcon" mat-icon-button class="icon-button" (click)="onActionButtonClick()">
-        <mat-icon>file_download</mat-icon>
+        <span class="material-symbols-outlined"> download </span>
       </button>
     </div>
   </div>
