Import-Export buttons in common tag component (#1730)
* Added Import Export buttons in Common Tags Input Component

* Change in tsdoc

* Toggle the action buttons w.r.t tags value

* Changed the icons using google icons and added stylesheet request for it in index file

---------

Co-authored-by: danoswaltCL <97542869+danoswaltCL@users.noreply.github.com>

--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.scss
@@ -1,3 +1,32 @@
 mat-form-field {
   width: 100%;
 }
+.icon-buttons-present {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.icon-button {
+  background: none;
+  border: none;
+  box-shadow: none;
+  outline: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+}
+
+.icon-button {
+  color: var(--grey-2);
+}
