Feature Flag export JSON and CSV modals with crud changes on frontend side

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/update-flag-status-confirmation-modal/update-flag-status-confirmation-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/update-flag-status-confirmation-modal/update-flag-status-confirmation-modal.component.html
@@ -5,7 +5,7 @@
       [cancelBtnLabel]="config.cancelBtnLabel"
       [primaryActionBtnLabel]="config.primaryActionBtnLabel"
       [primaryActionBtnColor]="config.primaryActionBtnColor"
-      [primaryActionBtnDisabled$]="isLoadingUpdateFeatureFlagStatus$"
+      [primaryActionBtnDisabled$]="isLoadingUpdateFeatureFlagStatus$  | async"
       (primaryActionBtnClicked)="
         onPrimaryActionBtnClicked({
           flagId: flag.id,
