--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-root-page-header/common-root-page-header.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-root-page-header/common-root-page-header.component.scss
@@ -1,5 +1,5 @@
 ::ng-deep .header {
-  height: 112px;
+  min-height: 112px;
   display: flex;
   flex-direction: column;
   justify-content: center;
