--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-confirmation-template/common-confirmation-template.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-confirmation-template/common-confirmation-template.component.scss
@@ -1,9 +1,8 @@
 .dialog {
     padding: 20px 0px;
 
-    .email-confirm {
+    .subMessage {
         margin-top: 10px;
         color: var(--blue);
     }
 }
-
