--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-modal/common-modal.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-modal/common-modal.component.html
@@ -14,7 +14,7 @@
   <!-- bottom part of the dialog -->
   <section *ngIf="!hideFooter" class="footer-container">
     <mat-dialog-actions style="align-self: end">
-      <button class="dialog-action-btn cancel-btn" mat-flat-button [mat-dialog-close]="'goodbye'">
+      <button class="dialog-action-btn cancel-btn" mat-flat-button [mat-dialog-close]="false">
         {{ cancelBtnLabel }}
       </button>
       <button
