--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-post-condition/experiment-post-condition.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-post-condition/experiment-post-condition.component.html
@@ -1,8 +1,7 @@
 <div class="shared-modal--step-container">
   <section class="shared-modal--form-container">
-    <form [formGroup]="postExperimentRuleForm" class="post-experiment-rule-form">
+    <form [formGroup]="postExperimentRuleForm" class="post-experiment-rule-form dense-3">
       <mat-form-field
-        class="dense-2"
         appearance="outline"
         subscriptSizing="dynamic"
       >
@@ -20,7 +19,6 @@
       </mat-form-field>
 
       <mat-form-field
-        class="dense-2"
         appearance="outline"
         subscriptSizing="dynamic"
       >
