--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/add-feature-flag-modal/add-feature-flag-modal.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/add-feature-flag-modal/add-feature-flag-modal.component.scss
@@ -1,33 +1,15 @@
-:host ::ng-deep .add-feature-flag-modal-container {
+.form-standard {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: space-between;
-  width: 100%;
-  max-height: 700px;
-}
+  row-gap: 16px;
 
-.title {
-  font-size: 18px;
-  font-weight: bold;
-}
+  .form-hint {
+    color: var(--dark-grey);
+  }
 
-.mat-mdc-form-field {
-  width: 100%;
-}
-
-.mat-mdc-form-field:not(:last-child) {
-  margin-bottom: 20px;
-}
-
-.form-hint {
-  color: var(--grey-5);
-}
-
-.learn-more-link {
-  color: var(--blue);
-  text-decoration: none;
-
-  &:hover {
+  .learn-more-link {
+    color: var(--blue);
     text-decoration: underline;
   }
 }
