--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.scss
@@ -1,32 +1,26 @@
-mat-form-field {
-  width: 100%;
-}
-.icon-buttons-present {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-.container {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
+.input-container {
+  padding-bottom: 16px;
 
-.icon-button {
-  background: none;
-  border: none;
-  box-shadow: none;
-  outline: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 12px;
-}
+  .chips-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 
-.icon-button {
-  color: var(--grey-2);
+    .icon-button {
+      background: none;
+      border: none;
+      box-shadow: none;
+      outline: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: var(--dark-grey);
+      margin-right: -11px;
+
+      .material-symbols-outlined {
+        font-size: 20px;
+      }
+    }
+  }
 }
