--- a/frontend/projects/upgrade/src/styles/variables.scss
+++ b/frontend/projects/upgrade/src/styles/variables.scss
@@ -4,6 +4,7 @@
   --water: #f0f2f9;
   --light-grey-2: #dce0e6;
   --grey-3: #929fae; /* same as --grey-3 */
+  --disabled-text: #8b8b8b;
   --dark-grey: #646e7b;
   --darker-grey: #444e5b;
   --light-black: #222b45; /* same as --black-2 */
