--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/import-feature-flag-modal/import-feature-flag-modal.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/import-feature-flag-modal/import-feature-flag-modal.component.scss
@@ -1,22 +1,12 @@
 .drag-drop-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  color: grey;
+  row-gap: 2px;
+  padding: 40px 32px 24px;
 
-  .full-width {
-    width: 100%;
+  .form-hint {
+    text-indent: 16px;
+    margin-bottom: 0;
   }
 }
 
-.import-message {
-  margin-top: 5px;
-  color: grey;
-}
-
-a {
-  text-decoration: none;
-}
