--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/upsert-feature-flag-list-modal/upsert-feature-flag-list-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/upsert-feature-flag-list-modal/upsert-feature-flag-list-modal.component.html
@@ -1,20 +1,18 @@
-<div class="upsert-feature-flag-list-container">
-  <app-common-dialog
-    [title]="config.title"
-    [cancelBtnLabel]="config.cancelBtnLabel"
-    [primaryActionBtnLabel]="config.primaryActionBtnLabel"
-    [primaryActionBtnColor]="config.primaryActionBtnColor"
-    (primaryActionBtnClicked)="onPrimaryActionBtnClicked()"
-  >
-    <form [formGroup]="featureFlagListForm" class="full-width">
-      <mat-form-field appearance="outline">
-        <mat-label>Type</mat-label>
-        <mat-select formControlName="type">
-          <mat-option *ngFor="let type of listOptionTypes$ | async" [value]="type.value">
-            {{ type.viewValue }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </form>
-  </app-common-dialog>
-</div>
+<app-common-dialog
+  [title]="config.title"
+  [cancelBtnLabel]="config.cancelBtnLabel"
+  [primaryActionBtnLabel]="config.primaryActionBtnLabel"
+  [primaryActionBtnColor]="config.primaryActionBtnColor"
+  (primaryActionBtnClicked)="onPrimaryActionBtnClicked()"
+>
+  <form [formGroup]="featureFlagListForm" class="form-standard dense-3">
+    <mat-form-field appearance="outline">
+      <mat-label class="ft-14-400">Type</mat-label>
+      <mat-select formControlName="type" class="ft-14-400">
+        <mat-option *ngFor="let type of listOptionTypes$ | async" [value]="type.value" class="ft-14-400">
+          {{ type.viewValue }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </form>
+</app-common-dialog>
