--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-import-container/common-import-container.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-import-container/common-import-container.component.html
@@ -1,13 +1,13 @@
 <div
-  class="input-container"
+  class="import-container"
   (dragover)="onDragOver($event)"
   (dragleave)="onDragLeave($event)"
   (drop)="onDrop($event)"
   [ngClass]="{ 'drag-over': (isDragOver | async) }"
 >
-    <mat-icon>file_upload</mat-icon>
-    <p class="ft-14-600 drag-text">Drag & drop or</p>
-    <button mat-flat-button color="primary" (click)="fileInput.click()">
+    <span class="material-symbols-outlined">upload</span>
+    <p class="ft-12-600 drag-text">Drag and drop or</p>
+    <button mat-flat-button color="primary" class="choose-json-btn" (click)="fileInput.click()">
       <span>{{ buttonLabel }}</span>
     </button>
     <input [accept]="fileType" type="file" multiple #fileInput style="display: none" (change)="onFileSelected($event)" />
