--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-modal/common-modal.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-modal/common-modal.component.html
@@ -1,7 +1,7 @@
 <mat-card class="common-modal">
   <!-- top part of the dialog -->
   <header class="header-container">
-    <h4 class="header-title">{{ title }}</h4>
+    <h2 class="header-title">{{ title }}</h2>
     <button mat-icon-button mat-dialog-close class="close-btn">
       <mat-icon aria-label="Close dialog">close</mat-icon>
     </button>
@@ -14,7 +14,7 @@
   <!-- bottom part of the dialog -->
   <section *ngIf="!hideFooter" class="footer-container">
     <mat-dialog-actions style="align-self: end">
-      <button class="dialog-action-btn cancel-btn" mat-flat-button [mat-dialog-close]="'goodbye'">
+      <button class="dialog-action-btn cancel-btn" mat-flat-button [mat-dialog-close]="false">
         {{ cancelBtnLabel }}
       </button>
       <button
