changed loader to progress bar

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
@@ -1,6 +1,6 @@
 <div class="flags-list-container">
-   <div (wheel)="fetchFlagsOnScroll()" class="flags-list-table-container" #tableContainer>
-    <mat-spinner class="spinner" mode="indeterminate" *ngIf="isLoading$ | async"></mat-spinner>
+  <div (wheel)="fetchFlagsOnScroll()" class="flags-list-table-container" #tableContainer>
+    <mat-progress-bar class="spinner" mode="indeterminate" *ngIf="isLoading$ | async"></mat-progress-bar>
     <table
       class="flags-list"
       mat-table
@@ -25,11 +25,7 @@
             {{ flag.name }}
           </a>
           <ng-template #flagNameEllipsis>
-            <span
-              [matTooltip]="flag.name"
-              class="flag-name"
-              matTooltipPosition="above"
-            >
+            <span [matTooltip]="flag.name" class="flag-name" matTooltipPosition="above">
               {{ flag.name | truncate: 30 }}
             </span>
           </ng-template>
