Added pagination call on scroll in FF (#1712)
* Added pagination call on scroll. Loader changed to spinner

* Optimised feature flag fetching in Effects

* Removed isLoadingFeatureFlags handling on actionFetchFeatureFlags from Reducer

* Removed unused subscription

* changed loader to progress bar

---------

Co-authored-by: danoswaltCL <97542869+danoswaltCL@users.noreply.github.com>

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
@@ -1,5 +1,5 @@
 <div class="flags-list-container">
-  <div scroll (scrolled)="fetchFlagsOnScroll()" class="flags-list-table-container" #tableContainer>
+  <div (wheel)="fetchFlagsOnScroll()" class="flags-list-table-container" #tableContainer>
     <mat-progress-bar class="spinner" mode="indeterminate" *ngIf="isLoading$ | async"></mat-progress-bar>
     <table
       class="flags-list"
@@ -25,11 +25,7 @@
             {{ flag.name }}
           </a>
           <ng-template #flagNameEllipsis>
-            <span
-              [matTooltip]="flag.name"
-              class="flag-name"
-              matTooltipPosition="above"
-            >
+            <span [matTooltip]="flag.name" class="flag-name" matTooltipPosition="above">
               {{ flag.name | truncate: 30 }}
             </span>
           </ng-template>
