--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-simple-confirmation-modal/common-simple-confirmation-modal.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-simple-confirmation-modal/common-simple-confirmation-modal.component.scss
@@ -1,7 +1,25 @@
-.dialog {
+.confirm-modal-content {
     padding: 20px 0px;
 
     .subMessage {
         margin-top: 10px;
+    }
+
+    display: flex;
+    flex-direction: column;
+    row-gap: 16px;
+    padding: 40px 32px;
+  
+    &-text {
+      color: var(--dark-grey);
+      margin-bottom: 0;
+  
+      &.info {
+        color: var(--blue);
+      }
+  
+      &.warn {
+        color: var(--red-2);
+      }
     }
 }
